--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,34 @@
-pyttsx3>=2.90
-SpeechRecognition>=3.10.0
-requests>=2.31.0
-beautifulsoup4>=4.12.2
-lxml>=4.9.3
-pyautogui>=0.9.53
+audioop-lts==0.2.2
+beautifulsoup4==4.14.3
+blinker==1.9.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+Flask==3.1.2
+idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+lxml==6.0.2
+MarkupSafe==3.0.3
+MouseInfo==0.1.3
+pillow==12.1.0
+PyAudio==0.2.14
+PyAutoGUI==0.9.54
+PyGetWindow==0.0.9
+PyMsgBox==2.0.1
+pyperclip==1.11.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+python3-xlib==0.15
+pyttsx3==2.99
+pytweening==1.2.0
+pywhatkit==5.4
+requests==2.32.5
+soupsieve==2.8.3
+SpeechRecognition==3.14.5
+standard-aifc==3.13.0
+standard-chunk==3.13.0
+typing_extensions==4.15.0
+urllib3==2.6.3
+Werkzeug==3.1.5
+wikipedia==1.4.0
