--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "assistant": {
     "name": "Personal Assistant",
     "version": "2.0",
+    "prefer_online_tts":true,
     "voice_speed": 150,
     "voice_volume": 0.9
   },
