--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ audioop-lts==0.2.2
 beautifulsoup4==4.14.3
 blinker==1.9.0
 certifi==2026.1.4
+cffi==2.0.0
 charset-normalizer==3.4.4
-click==8.3.1
+click==8.1.8
 Flask==3.1.2
+flask-cors==6.0.2
+gTTS==2.5.4
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -12,8 +15,11 @@ lxml==6.0.2
 MarkupSafe==3.0.3
 MouseInfo==0.1.3
 pillow==12.1.0
+pocketsphinx==5.0.4
 PyAudio==0.2.14
 PyAutoGUI==0.9.54
+pycparser==3.0
+pygame==2.6.1
 PyGetWindow==0.0.9
 PyMsgBox==2.0.1
 pyperclip==1.11.0
@@ -24,6 +30,7 @@ pyttsx3==2.99
 pytweening==1.2.0
 pywhatkit==5.4
 requests==2.32.5
+sounddevice==0.5.5
 soupsieve==2.8.3
 SpeechRecognition==3.14.5
 standard-aifc==3.13.0
@@ -32,3 +39,6 @@ typing_extensions==4.15.0
 urllib3==2.6.3
 Werkzeug==3.1.5
 wikipedia==1.4.0
+opencv-python
+mediapipe
+psycopg2-binary
