--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.1.8
+customtkinter
 Flask==3.1.2
 flask-cors==6.0.2
 gTTS==2.5.4
@@ -39,6 +40,7 @@ typing_extensions==4.15.0
 urllib3==2.6.3
 Werkzeug==3.1.5
 wikipedia==1.4.0
+yt-dlp
 opencv-python
 mediapipe
 psycopg2-binary
